cambios en botones

--- a/calendario.html
+++ b/calendario.html
@@ -9,24 +9,78 @@
 
 <body>
 <div>
+	
 	<button>
-<a href="home.html"><input type="button" value="HOME"></a>
+		<a href="home.html"><input type="button" value="HOME"></a>
+	</button>
+	<img src="img_baloncesto/img1.png">
+	<button>
+		<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+	</button>
+</div>	
+
+<div>
+	
+	<button>
+		<a href="home.html"><input type="button" value="HOME"></a>
+	</button>
+		<img src="img_baloncesto/img2.png">
+	<button>
+		<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 	</button>
 </div>
 
 <div>
-	<img src="img_baloncesto/img1.png">
-	<img src="img_baloncesto/img2.png">
-	<img src="img_baloncesto/img3.png">
-	<img src="img_baloncesto/img4.png">
-	<img src="img_baloncesto/img5.png">
-	<img src="img_baloncesto/img6.png">
-	<img src="img_baloncesto/img7.png">
+	
+	<button>
+		<a href="home.html"><input type="button" value="HOME"></a>
+	</button>
+		<img src="img_baloncesto/img3.png">
+	<button>
+		<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+	</button>
+</div>
+
+<div>
+	
+	<button>
+		<a href="home.html"><input type="button" value="HOME"></a>
+	</button>
+		<img src="img_baloncesto/img4.png">
+	<button>
+		<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+	</button>
+</div>
+
+<div>
+	
+	<button>
+		<a href="home.html"><input type="button" value="HOME"></a>
+	</button>
+		<img src="img_baloncesto/img5.png">
+	<button>
+		<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+	</button>
 </div>
 
 <div>
 	<button>
-<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+		<a href="home.html"><input type="button" value="HOME"></a>
+	</button>
+	<img src="img_baloncesto/img6.png">
+	<button>
+		<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+	</button>
+</div>
+
+<div>
+	
+	<button>
+		<a href="home.html"><input type="button" value="HOME"></a>
+	</button>
+	<img src="img_baloncesto/img7.png">
+	<button>
+		<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 	</button>
 </div>
 
