--- a/contacto.html
+++ b/contacto.html
@@ -10,18 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-<body class="vertical">
-
- <div> <img class="img1" src="img/EquipoMasculino.webp" alt=""> </div>
- <div> <img class="img2" src="img/Equipo_Femenino.webp" alt=""> </div>
+<body >
     
-</body>
+  
+<section class="container">
+<div > 
 
-<main> 
-
-    <h4>Contacto</h4>
-
-    <form action="/enviar.php" method="post">
+    <h1>Contacto</h1>
+      <form action="/enviar.php" method="post">
         <label for="nombre">Nombre y Apellido:</label>
         <input type="text" id="nombre" name="nombre" required>
 
@@ -34,9 +30,19 @@
         <label for="mensaje">Mensaje:</label>
         <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
-        <button type="submit">Enviar</button>
-    </form>
 
-</main>
+        <button type="submit">Enviar</button>
+
+
+
+    </form>
+</div>
+</section>
+
+<h2> INFORMACION DE CONTACTOS</h2>
+
+
+
+</body>
 
 </html>
