he actualizado la parte de general html añadiendo la hamburguesa

--- a/general.html
+++ b/general.html
@@ -38,6 +38,9 @@
                 <li><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></li>         
             </ul>
         </div>
+        <div class="hamburguesa_menu">
+            <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+        </div>
 
     </nav>
 
