--- a/general.html
+++ b/general.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="inicio.css">
+    <link rel="stylesheet" href="general.css">
     <script src="https://kit.fontawesome.com/0cab5e247d.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
