ultimos cambios de ajuste de imagen entrenadores

--- a/plantillas.html
+++ b/plantillas.html
@@ -47,9 +47,9 @@
     <main>
         <!--Aqui van el div de los entrenadores de la plantilla-->
         <div class="plantilla_entrenador">
-            <div class="plantilla_nombre">
+            <div class="plantilla_nombre_entrenadores">
                 <div>
-                    <img class="imagenes_jugadores" src="/img_baloncesto/entrenador baloncesto/png-clipart-basketball-coach-t-shirt-academy-basketball-coach.png" alt="">
+                    <img class="imagenes_entrenadores" src="/img_baloncesto/entrenador baloncesto/png-clipart-basketball-coach-t-shirt-academy-basketball-coach.png" alt="">
                 </div> 
                 <div class="nombre_posicion">
                     <p>Ronald Richards</p> 
@@ -57,9 +57,9 @@
                 </div>
             
             </div> 
-            <div class="plantilla_nombre">
+            <div class="plantilla_nombre_entrenadores">
                 <div>
-                    <img class="imagenes_jugadores" src="/img_baloncesto/entrenador baloncesto/png-clipart-brose-bamberg-stefan-weissenbock-coach-t-shirt-team-sport-basketball-coach-tshirt-team.png" alt="">
+                    <img class="imagenes_entrenadores" src="/img_baloncesto/entrenador baloncesto/png-clipart-brose-bamberg-stefan-weissenbock-coach-t-shirt-team-sport-basketball-coach-tshirt-team.png" alt="">
                 </div>
                 <div class="nombre_posicion">
                     <p>Marvin Mckinney <br>
