--- a/venta_de_entradas.html
+++ b/venta_de_entradas.html
@@ -63,8 +63,8 @@
   
 </section>
 <!-- Form-->
-<section class="form">
-  <table id="miTabla">
+<section>
+  <table>
     <thead>
       <tr>
         <th>Zona</th>
@@ -91,7 +91,9 @@
       
     </tbody>
   </table>
-  
+  </section>
+</article>
+  <section> 
 <form id="Form-Pago" action="#" method="get">
   <label for="fecha"> Seleccione la fecha <input type="date"> </label>
   <label for="tipo"> Tipo de Entradas 
@@ -101,11 +103,11 @@
       <option value="2" > Regular</option>
     </select> </label>
   <label for="cantidad"> Cantidad <input type="number" min="1" max="10"> </label>
-  <input id="submit" type="submit" value="Reserva el ticket">
+  <input id="submit" type="submit" value="Continuar">
 </form>
 
 </section>
-</article>
+
   
 
 
