--- a/calendario.html
+++ b/calendario.html
@@ -43,7 +43,7 @@
     </nav>
 
 	<main>
-		<div class="entrada_1">
+		<div class="entrada_1"><!--botón imagen botón del primer div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
@@ -54,7 +54,7 @@
 			</button>
 		</div>	
 		<br>
-		<div class="entrada_2">
+		<div class="entrada_2"><!--botón imagen botón del segundo div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
@@ -65,7 +65,7 @@
 			</button>
 		</div>
 		<br>
-		<div class="entrada_3">
+		<div class="entrada_3"><!--botón imagen botón del tercer div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
@@ -76,7 +76,7 @@
 			</button>
 		</div>
 		<br>
-		<div class="entrada_4">
+		<div class="entrada_4"><!--botón, imagen ,botón del cuarto div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
@@ -87,7 +87,7 @@
 			</button>
 		</div>
 		<br>
-		<div class="entrada_5">
+		<div class="entrada_5"><!--botón, imagen ,botón del quinto div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
@@ -98,7 +98,7 @@
 			</button>
 		</div>
 		<br>
-		<div class="entrada_6">
+		<div class="entrada_6"><!--botón, imagen, botón del sexto div-->
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -108,7 +108,7 @@
 			</button>
 		</div>
 		<br>
-		<div class="entrada_7">
+		<div class="entrada_7"><!--botón, imagen, botón del séptimo div-->
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
