--- a/calendario.html
+++ b/calendario.html
@@ -43,7 +43,7 @@
     </nav>
 
 	<main>
-		<div class="entrada_1"><!--botón imagen botón del primer div-->
+		<div class="entrada_1"><!--botón, imagen, botón del primer div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
@@ -54,7 +54,7 @@
 			</button>
 		</div>	
 		<br>
-		<div class="entrada_2"><!--botón imagen botón del segundo div-->
+		<div class="entrada_2"><!--botón, imagen, botón, del segundo div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
@@ -65,7 +65,7 @@
 			</button>
 		</div>
 		<br>
-		<div class="entrada_3"><!--botón imagen botón del tercer div-->
+		<div class="entrada_3"><!--botón, imagen, botón del tercer div-->
 	
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
