--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/0cab5e247d.js" crossorigin="anonymous"></script>
 
 </head>
-<body >
+
 
     <nav>
         <div class="logo_nav">
@@ -47,12 +47,12 @@
         </div>
 
     </nav>
-    
   
+<body >
+            
 <section class="container">
 
-
-<div > 
+<div> 
 
     <h1>Contacto</h1>
 
@@ -84,7 +84,6 @@
 
 <h2> INFORMACION DE CONTACTOS</h2><br><br>
 
-<div class="informacion">
 
     <p> Club: BSK BASAURI SASKIBALOI KLUBA</p><br>
     <p>Dirección: https://maps.app.goo.gl/TXfmvERDzKvzwiTd9</p><br>
@@ -93,11 +92,8 @@
     <p>Población: Basauri</p><br>
     <p>Teléfono: 695788997</p><br>
 
-</div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.75012267955!2d-2.885253997769142!3d43.23261891513291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4e4e91afb21f8f%3A0xbe4c97b025275975!2sPolideportivo%20Artunduaga%20-%20Basauri%20Kirolak!5e0!3m2!1ses!2ses!4v1702887208196!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-<div class="mapa">
-
-  <img src="img/thumbnail.jpeg" alt="">
 
 </div>
 
