plantilla todo terminado menos media corie

--- a/plantillas.html
+++ b/plantillas.html
@@ -49,7 +49,7 @@
         <div class="plantilla_entrenador">
             <div class="plantilla_nombre_entrenadores">
                 <div>
-                    <img class="imagenes_entrenadores" src="/img_baloncesto/entrenador baloncesto/png-clipart-basketball-coach-t-shirt-academy-basketball-coach.png" alt="">
+                    <img class="imagenes_entrenadores" src="/img_baloncesto/entrenador baloncesto/entrnador_sin fondo.png" alt="">
                 </div> 
                 <div class="nombre_posicion">
                     <p>Ronald Richards</p> 
@@ -59,7 +59,7 @@
             </div> 
             <div class="plantilla_nombre_entrenadores">
                 <div>
-                    <img class="imagenes_entrenadores" src="/img_baloncesto/entrenador baloncesto/png-clipart-brose-bamberg-stefan-weissenbock-coach-t-shirt-team-sport-basketball-coach-tshirt-team.png" alt="">
+                    <img class="imagenes_entrenadores" src="/img_baloncesto/entrenador baloncesto/entrenaodor_1 sin fondo.png" alt="">
                 </div>
                 <div class="nombre_posicion">
                     <p>Marvin Mckinney <br>
@@ -69,6 +69,7 @@
         </div>
         <!--Aqui va el div de los jugadores de la plantilla-->
         <div class="plantilla_jugadores">
+            <!--jugador 1-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título1.png" alt="">
@@ -78,7 +79,7 @@
                     <p>Entrenador</p>
                 </div>
             </div>
-
+            <!--jugador 2-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título2.png" alt="">
@@ -88,6 +89,7 @@
                     <p>Entrenador</p>
                 </div>       
             </div> 
+             <!--jugador 3-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título3.png" alt="">
@@ -97,6 +99,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 4-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título4.png" alt="">
@@ -106,6 +109,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 5-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título5.png" alt="">
@@ -115,6 +119,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 6-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título6.png" alt="">
@@ -124,6 +129,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 7-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título7.png" alt="">
@@ -133,6 +139,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 8-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título8.png" alt="">
@@ -142,6 +149,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 9-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título9.png" alt="">
@@ -151,6 +159,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 10-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título10.png" alt="">
@@ -160,6 +169,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 11-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título11.png" alt="">
@@ -169,6 +179,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 12-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título12.png" alt="">
@@ -178,6 +189,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 13-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título13.png" alt="">
@@ -187,6 +199,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 14-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título14.png" alt="">
@@ -196,6 +209,7 @@
                     <p>Entrenador</p>
                 </div>
             </div> 
+             <!--jugador 15-->
             <div class="plantilla_nombre">
                 <div>
                     <img class="imagenes_jugadores" src="/img_baloncesto/jugadores baloncesto/Sin título15.png" alt="">
