--- a/calendario.html
+++ b/calendario.html
@@ -9,6 +9,7 @@
 	<title>calendario</title>
 </head>
 <body>
+	
 	<nav>
         <div class="logo_nav">
             <img src="logo.png" alt="">
@@ -39,10 +40,10 @@
         <div class="hamburguesa_menu">
             <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
         </div>
-
     </nav>
 
 	<main>
+
 		<div class="entrada_1"><!--botón, imagen, botón del primer div-->
 	
 			<button class="home">
@@ -112,10 +113,22 @@
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
-			<img class="image"src="img_baloncesto/img7.png">
+			<img class="image"src="img_baloncesto/img7.png"> 
 			<button class="entradas">
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
+			<br>
+
+			<div class="entrada_8"><!--botón, imagen, botón del octavo div-->
+	
+				<button class="home">
+					<a href="home.html"><input type="button" value="HOME"></a>
+				</button>
+				<img class="image" src="img_baloncesto/img8.png">
+				<button class="entradas">
+					<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+				</button>
+			</div>		
 		</div>
 	</main>
 
