cambio de fondo

--- a/contacto.html
+++ b/contacto.html
@@ -48,6 +48,8 @@
 
     </nav>
   
+
+<main>
 <body >
             
 <section class="container">
@@ -72,7 +74,7 @@
 
         <label for="mensaje">Mensaje:</label>
         <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-
+        
 
         <button type="submit">Enviar</button>
 
@@ -96,6 +98,8 @@
 
 
 </div>
+
+</main>
 
 </section>
 <footer>
@@ -127,7 +131,6 @@
     </div>
     <div class="footer-logo"><img src="img/Logo black.png" alt=""></div>
 </div>
-
 </footer>
 </body>
 
