cambios en botones

--- a/calendario.html
+++ b/calendario.html
@@ -43,9 +43,8 @@
     </nav>
 
 	<main>
-
-		<div class="entrada_1"><!--botón, imagen, botón del primer div-->
-	
+<!--botón, imagen, botón del primer div-->
+		<div class="entrada_1">
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -54,9 +53,9 @@
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
 		</div>	
-		<br>
-		<div class="entrada_2"><!--botón, imagen, botón, del segundo div-->
-	
+		
+<!--botón, imagen, botón, del segundo div-->		
+		<div class="entrada_2">
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -65,9 +64,8 @@
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
 		</div>
-		<br>
-		<div class="entrada_3"><!--botón, imagen, botón del tercer div-->
-	
+<!--botón, imagen, botón del tercer div-->		
+		<div class="entrada_3">
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -76,9 +74,8 @@
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
 		</div>
-		<br>
-		<div class="entrada_4"><!--botón, imagen ,botón del cuarto div-->
-	
+<!--botón, imagen ,botón del cuarto div-->		
+		<div class="entrada_4">
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -87,9 +84,8 @@
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
 		</div>
-		<br>
-		<div class="entrada_5"><!--botón, imagen ,botón del quinto div-->
-	
+<!--botón, imagen ,botón del quinto div-->
+		<div class="entrada_5">
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -98,8 +94,8 @@
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
 		</div>
-		<br>
-		<div class="entrada_6"><!--botón, imagen, botón del sexto div-->
+<!--botón, imagen, botón del sexto div-->		
+		<div class="entrada_6">
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -108,8 +104,8 @@
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
 		</div>
-		<br>
-		<div class="entrada_7"><!--botón, imagen, botón del séptimo div-->
+<!--botón, imagen, botón del séptimo div-->		
+		<div class="entrada_7">
 			<button class="home">
 				<a href="home.html"><input type="button" value="HOME"></a>
 			</button>
@@ -117,18 +113,18 @@
 			<button class="entradas">
 				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
 			</button>
-			<br>
-
-			<div class="entrada_8"><!--botón, imagen, botón del octavo div-->
+		</div>	
+<!--botón, imagen, botón del octavo div-->
+		<div class="entrada_8">
+			<button class="home">
+				<a href="home.html"><input type="button" value="HOME"></a>
+			</button>
+			<img class="image" src="img_baloncesto/img8.png">
+			<button class="entradas">
+				<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
+			</button>
 	
-				<button class="home">
-					<a href="home.html"><input type="button" value="HOME"></a>
-				</button>
-				<img class="image" src="img_baloncesto/img8.png">
-				<button class="entradas">
-					<a href="venta_de_entradas.html"><input type="button" value="ENTRADAS"></a>
-				</button>
-			</div>		
+				
 		</div>
 	</main>
 
