cambiado el menu del general

--- a/plantillas.html
+++ b/plantillas.html
@@ -19,10 +19,10 @@
         </div>
         <div class="menu_nav">
             <ul>
-                <li>PLANTILLA</li>
-                <li>CALENDARIO</li>
-                <li>ENTRADAS</li>
-                <li>CONTACTO</li>
+                <li><a href="/plantillas.html">PLANTILLA</a></li>
+                <li><a href="/calendario.html">CALENDARIO</a></li>
+                <li><a href="/venta_de_entradas.html">ENTRADAS</a></li>
+                <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
 
         </div>
