--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <div class="item">
                         <div class="jugador">
                             <div class="equipo-img">
-                                <img src="img_inicio/Rectangle 3385.png" alt="1">
+                                <img src="img_inicio/1-1.png" alt="1">
                             </div>
                             <div>
                                 <p>Base</p>
@@ -144,7 +144,7 @@
                     <div class="item">
                         <div class="jugador">
                             <div class="equipo-img">
-                                <img src="img_inicio/Rectangle 3386.png" alt="1">
+                                <img src="img_inicio/1-2.png" alt="1">
                             </div>
                             <div>
                                 <p>Base</p>
@@ -155,7 +155,7 @@
                     <div class="item">
                         <div class="jugador">
                             <div class="equipo-img">
-                                <img src="img_inicio/Rectangle 3386.png" alt="1">
+                                <img src="img_inicio/1-3.png" alt="1">
                             </div>
                             <div>
                                 <p>Base</p>
@@ -166,7 +166,7 @@
                     <div class="item">
                         <div class="jugador">
                             <div class="equipo-img">
-                                <img src="img_inicio/Rectangle 3386.png" alt="1">
+                                <img src="img_inicio/1-4.png" alt="1">
                             </div>
                             <div>
                                 <p>Base</p>
@@ -177,7 +177,7 @@
                     <div class="item">
                         <div class="jugador">
                             <div class="equipo-img">
-                                <img src="img_inicio/Rectangle 3386.png" alt="1">
+                                <img src="img_inicio/1-5.png" alt="1">
                             </div>
                             <div>
                                 <p>Base</p>
