he actualizado el nav y footer de plantilla

--- a/plantillas.html
+++ b/plantillas.html
@@ -14,8 +14,9 @@
 <body>
     <nav>
         <div class="logo_nav">
-            <img src="logo.png" alt="">
-
+           <a href="/index.html"> 
+            <img src="logo.png"alt="" >
+           </a>
         </div>
         <div class="menu_nav">
             <ul>
@@ -250,13 +251,13 @@
             </div>
         </div>
     <div class="footer-abajo">
-        <div class="footer-menu">
+     <!--   <div class="footer-menu">
             <div>INICIO</div>
             <div>HORARIO</div>
             <div>ENTRADAS</div>
             <div>PLANTILLAS</div>
             <div>TIENDA</div>
-        </div>
+        </div>-->
         <div class="footer-logo"><img src="img/Logo black.png" alt=""></div>
     </div>
     </footer>
