footer y nav update

--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
             </div>
         </div>
         <div class="footer-abajo">
-            <div class="footer-menu">
-                <div>INICIO</div>
-                <div>HORARIO</div>
-                <div>ENTRADAS</div>
-                <div>PLANTILLAS</div>
-                <div>TIENDA</div>
-            </div>
+     <!--   <div class="footer-menu">
+            <div>INICIO</div>
+            <div>HORARIO</div>
+            <div>ENTRADAS</div>
+            <div>PLANTILLAS</div>
+            <div>TIENDA</div>
+        </div>-->
             <div class="footer-logo"><img src="img/Logo black.png" alt=""></div>
         </div>
     </footer>
