--- a/calendario.html
+++ b/calendario.html
@@ -12,15 +12,16 @@
 	
 	<nav>
         <div class="logo_nav">
-            <img src="logo.png" alt="">
-
+           <a href="/index.html"> 
+            <img src="logo.png"alt="" >
+           </a>
         </div>
         <div class="menu_nav">
             <ul>
-                <li>PLANTILLA</li>
-                <li>CALENDARIO</li>
-                <li>ENTRADAS</li>
-                <li>CONTACTO</li>
+                <li><a href="/plantillas.html">PLANTILLA</a></li>
+                <li><a href="/calendario.html">CALENDARIO</a></li>
+                <li><a href="/venta_de_entradas.html">ENTRADAS</a></li>
+                <li><a href="/contacto.html">CONTACTO</a></li>
             </ul>
 
         </div>
@@ -40,7 +41,8 @@
         <div class="hamburguesa_menu">
             <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
         </div>
-    </nav>
+
+    </nav>	
 
 	<main>
 <!--botón, imagen, botón del primer div-->
@@ -127,9 +129,7 @@
 				
 		</div>
 	</main>
-
-	
-    <footer>
+	<footer>
         <div class="marquee-infinite">
             <div>
                 <span>
@@ -149,16 +149,18 @@
             </div>
         </div>
     <div class="footer-abajo">
-        <div class="footer-menu">
+     <!--   <div class="footer-menu">
             <div>INICIO</div>
             <div>HORARIO</div>
             <div>ENTRADAS</div>
             <div>PLANTILLAS</div>
             <div>TIENDA</div>
-        </div>
+        </div>-->
         <div class="footer-logo"><img src="img/Logo black.png" alt=""></div>
     </div>
     </footer>
+	
+    
 </body>
 		
 	</html>
