algunas pequeñas cosas de general modificadas

--- a/contacto.html
+++ b/contacto.html
@@ -74,7 +74,7 @@
         <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
 
 
-        <button type="submit">Enviar</button>
+        <button type="submit">ENVIAR</button>
 
     </form>
 
