terminado a falta de revisión

--- a/calendario.html
+++ b/calendario.html
@@ -48,7 +48,7 @@
 <!--botón, imagen, botón del primer div-->
 		<div class="entrada_1">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image" src="img_baloncesto/img1.png">
 			<button class="entradas">
