--- a/calendario.html
+++ b/calendario.html
@@ -59,7 +59,7 @@
 <!--botón, imagen, botón, del segundo div-->		
 		<div class="entrada_2">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image"src="img_baloncesto/img2.png">
 			<button class="entradas">
@@ -69,7 +69,7 @@
 <!--botón, imagen, botón del tercer div-->		
 		<div class="entrada_3">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image"src="img_baloncesto/img3.png">
 			<button class="entradas">
@@ -79,7 +79,7 @@
 <!--botón, imagen ,botón del cuarto div-->		
 		<div class="entrada_4">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image"src="img_baloncesto/img4.png">
 			<button class="entradas">
@@ -89,7 +89,7 @@
 <!--botón, imagen ,botón del quinto div-->
 		<div class="entrada_5">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image"src="img_baloncesto/img5.png">
 			<button class="entradas">
@@ -99,7 +99,7 @@
 <!--botón, imagen, botón del sexto div-->		
 		<div class="entrada_6">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image"src="img_baloncesto/img6.png">
 			<button class="entradas">
@@ -109,7 +109,7 @@
 <!--botón, imagen, botón del séptimo div-->		
 		<div class="entrada_7">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image"src="img_baloncesto/img7.png"> 
 			<button class="entradas">
@@ -119,7 +119,7 @@
 <!--botón, imagen, botón del octavo div-->
 		<div class="entrada_8">
 			<button class="home">
-				<a href="home.html"><input type="button" value="HOME"></a>
+				<a href="index.html"><input type="button" value="HOME"></a>
 			</button>
 			<img class="image" src="img_baloncesto/img8.png">
 			<button class="entradas">
