--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                         Únete a nosotros y forma parte de una familia que comparte la pasión por el juego.</p>
                 </div>
                 <div class="btn">
-                    <button class="white">Próximos eventos</button>
-                    <button class="red">Entradas</button>
+                    <button class="white" onclick="document.location='calendario.html'">Próximos eventos</button>
+                    <button class="red" onclick="document.location='venta_de_entradas.html'">Entradas</button>
                 </div>
             </div>
         </div>
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="butn">
-                <button class="red">Comprar entradas</button>
+                <button class="red" onclick="document.location='venta_de_entradas.html'">Comprar entradas</button>
             </div>
         </div>
 
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="butn">
-                <button class="red">Ver plantilla</button>
+                <button class="red" onclick="document.location='plantillas.html'">Ver plantilla</button>
             </div>
         </div>
 
