Cambio de Entradas

--- a/venta_de_entradas.html
+++ b/venta_de_entradas.html
@@ -10,7 +10,7 @@
   
 </head>
 
-<body>
+
 <nav>
   <div class="logo_nav">
       <img src="logo.png" alt="">
@@ -44,27 +44,23 @@
 
 </nav>
 
-
-  <article class="section-flexible">
+<body>
+  <!-- <article class="section-flexible"> --> 
     <!-- Disposicion del Estadio-->
-<section class="section-images">
-  <div class="estadio-container ">
-    <div class="image-Izquierda" ></div>
-    <div class="centro">
-        <div class="image-Centro-Arriba"></div>
-        <div class="image-Centro"></div>
-        <div class="image-Centro-Abajo"></div>
-    </div>
-    <div class="image-Derecha"></div>
-  </div>
-</section>
-<!-- Tabla-->
-<section  class="section-tabla">
   
-</section>
-<!-- Form-->
+  <div class="estadio-container ">
+    <div class="image-Izquierda" onclick="scrollToSection('section-pago')"></div>
+    <div class="centro" >
+        <div class="image-Centro-Arriba" onclick="scrollToSection('section-pago')"></div>
+        <div class="image-Centro" onclick="scrollToSection('section-pago')"></div>
+        <div class="image-Centro-Abajo" onclick="scrollToSection('section-pago')"></div>
+    </div>
+    <div class="image-Derecha" onclick="scrollToSection('section-pago')"></div>
+  </div>
+<article class="section-flexible">
 <section>
-  <table>
+  <!-- Tabla-->
+  <table id="tabla">
     <thead>
       <tr>
         <th>Zona</th>
@@ -74,33 +70,28 @@
     <tbody>
       <tr >
         <td ><label for="der">Zona Derecha</label></td>
-        <td><input id="der" type="radio" name="precio" onclick="scrollToSection('section-pago')"><label for="der">$10</label></td>
+        <td><input class="inline" id="der" type="radio" name="precio" ><label for="der">$10</label></td>
       </tr>
       <tr>
         <td><label for="izq">Zona Izquierda</label></td>
-        <td><input id="izq" type="radio" name="precio" onclick="scrollToSection('section-pago')"><label for="izq">$10</td>
+        <td><input class="inline" id="izq" type="radio" name="precio" ><label for="izq">$10</td>
       </tr>
       <tr>
         <td><label for="sup">Zona Superior</label></td>
-        <td><input id="sup" type="radio" name="precio" onclick="scrollToSection('section-pago')"><label for="sup">$20</td>
+        <td><input class="inline" id="sup" type="radio" name="precio" ><label for="sup">$20</td>
       </tr>
       <tr>
         <td><label for="inf">Zona Inferior</label></td>
-        <td><input id="inf" type="radio" name="precio" onclick="scrollToSection('section-pago')"><label for="inf">$30</td>
+        <td><input class="inline" id="inf" type="radio" name="precio" ><label for="inf">$30</td>
       </tr>
       
     </tbody>
   </table>
   </section>
-  <script>
-    function scrollToSection(sectionId) {
-      const section = document.getElementById(sectionId);
-      if (section) {
-        section.scrollIntoView({ behavior: 'smooth' });
-      }
-    }
-  </script>
-</article>
+ 
+
+<!-- Form-->
+
   <section id="section-pago"> 
 <form id="Form-Pago" action="#" method="get">
   <label for="fecha"> Seleccione la fecha <input type="date"> </label>
@@ -115,8 +106,18 @@
 </form>
 
 </section>
+</article>
 
-  
+</body>
+<!---->
+<script>
+  function scrollToSection(sectionId) {
+    const section = document.getElementById(sectionId);
+    if (section) {
+      section.scrollIntoView({ behavior: 'smooth' });
+    }
+  }
+</script>
 
 
 <footer>
@@ -149,5 +150,5 @@
   <div class="footer-logo"><img src="img/Logo black.png" alt=""></div>
 </div>
 </footer>
-</body>
+
 </html>
