inicio 4.0: todo listo

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             </div>
                             <div>
                                 <p>Base</p>
-                                <h3>Devvon Lane</h3>
+                                <h3>Cameron Williamson</h3>
                             </div>
                         </div>
                     </div>
@@ -145,8 +145,8 @@
                                 <img src="img_inicio/1-3.png" alt="1">
                             </div>
                             <div>
-                                <p>Base</p>
-                                <h3>Devvon Lane</h3>
+                                <p>Base-Escolta</p>
+                                <h3>Ronald Richards</h3>
                             </div>
                         </div>
                     </div>
@@ -156,8 +156,8 @@
                                 <img src="img_inicio/1-4.png" alt="1">
                             </div>
                             <div>
-                                <p>Base</p>
-                                <h3>Devvon Lane</h3>
+                                <p>Alero</p>
+                                <h3>Arnet Black</h3>
                             </div>
                         </div>
                     </div>
@@ -167,8 +167,8 @@
                                 <img src="img_inicio/1-5.png" alt="1">
                             </div>
                             <div>
-                                <p>Base</p>
-                                <h3>Devvon Lane</h3>
+                                <p>Alero</p>
+                                <h3>Arlene Mcoy</h3>
                             </div>
                         </div>
                     </div>
