--- a/calendario.html
+++ b/calendario.html
@@ -12,7 +12,7 @@
 	
 	<nav>
         <label id="label_boton"for="boton_ham"> <i id="i" class="fa fa-bars"></i></label> 
-        <input id="boton_ham" type="checkbox" value"si">
+        <input id="boton_ham" type="checkbox" value="si">
         <div class="topnav" id="myTopnav">
           <div class="logo_nav">
            <a id="home" href="/index.html" class="active"> 
