--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="inicio.css">
     <script src="https://kit.fontawesome.com/0cab5e247d.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Basauri SC</title>
 </head>
 
 <body>
