--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <img src="img_inicio/1-1.png" alt="1">
                             </div>
                             <div>
-                                <p>Base</p>
+                                <p>Ala-Pivot</p>
                                 <h3>Devvon Lane</h3>
                             </div>
                         </div>
@@ -134,7 +134,7 @@
                                 <img src="img_inicio/1-2.png" alt="1">
                             </div>
                             <div>
-                                <p>Base</p>
+                                <p>Base-Escolta</p>
                                 <h3>Cameron Williamson</h3>
                             </div>
                         </div>
