--- a/general.html
+++ b/general.html
@@ -21,7 +21,7 @@
             <img src="img/Logo black.png"alt="" >
            </a>
          </div>
-                <a href="/plantillas.html">INICIO</a>
+                <a href="/index.html">INICIO</a>
                 <a href="/plantillas.html">PLANTILLA</a>
                 <a href="/calendario.html">CALENDARIO</a>
                 <a href="/venta_de_entradas.html">ENTRADAS</a>
