terminado la parte html de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -23,11 +23,11 @@
         <img src="img/Logo black.png"alt="" >
        </a>
      </div>
-        
-            <a href="plantillas.html">PLANTILLA</a>
-            <a href="calendario.html">CALENDARIO</a>
-            <a href="venta_de_entradas.html">ENTRADAS</a>
-            <a href="contacto.html">CONTACTO</a>
+            <a href="/index.html">INICIO</a>
+            <a href="/plantillas.html">PLANTILLA</a>
+            <a href="/calendario.html">CALENDARIO</a>
+            <a href="/venta_de_entradas.html">ENTRADAS</a>
+            <a href="/contacto.html">CONTACTO</a>
         
       <!--  <a  href="javascript:void(0);" class="icon ham" onclick="myFunction()">
             <i class="fa fa-bars"></i>-->
