--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="img/Logo black.png" alt="">
                 </a>
             </div>
-
+            <a href="/index.html">INICIO</a>
             <a href="/plantillas.html">PLANTILLA</a>
             <a href="/calendario.html">CALENDARIO</a>
             <a href="/venta_de_entradas.html">ENTRADAS</a>
@@ -289,7 +289,7 @@
     </main>
 
 
-	<footer>
+    <footer>
         <div class="marquee-infinite">
             <div>
                 <span>
@@ -316,8 +316,11 @@
             <div>PLANTILLAS</div>
             <div>TIENDA</div>
         </div>-->
-        <div class="footer-logo"><img src="img/Logo black.png" alt=""></div>
+        <div class="footer-logo">
+            <img src="img/Logo black.png" alt="">
+        </div>
     </div>
+    
     </footer>
 </body>
 
